syntax = "proto3";

message MoveFromServerData {
  string id = 1;
  string userID = 2;
  bool isMoving = 3;
  uint32 direction = 4;
  double x = 5;
  double y = 6;
  uint64 i = 7;
  bool isCharacterOfClient = 8;
  uint64 whenMovingHasChanged = 9;
}
